--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+beautifulsoup4==4.11.1
+bs4==0.0.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
@@ -5,10 +7,17 @@ Flask==2.1.2
 Flask-Cors==3.0.10
 gunicorn==20.1.0
 idna==3.3
+importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+pyactiveresource==2.2.2
+PyJWT==2.5.0
+PyYAML==6.0
 requests==2.28.1
+ShopifyAPI==12.0.0
 six==1.16.0
+soupsieve==2.3.2.post1
 urllib3==1.26.9
 Werkzeug==2.1.2
+zipp==3.8.1
